@@ -19,6 +19,7 @@ AUTHOR:
 
 extern const char *logtag;
 extern const char *spam_header_name;
+extern const char *spam_header_place;
 extern const char *user_config_file;
 
 extern rc_t query_config(void);
