@@ -12,6 +12,7 @@ typedef const char *FIELD;
 extern const char *spam_header_name;
 extern const char *spam_subject_tag;
 extern const char *unsure_subject_tag;
+//extern const char *spam_header_place;
 
 /* needed by bogoconfig.c */
 
