@@ -15,10 +15,19 @@
 
 -------------------------------------------------------------------------------
 
+	2007-02-25
+
+	* Add '--spam-header-place={header}' to specify header line
+	  before which the X-Bogosity line is placed.
+
+	2007-02-14
+
 	* Support --db-verify for sqlite3.
 
 	* Fix defect where the database verification method would not be called
 	  for traditional Berkeley DB databases. Reported by Eric Wood.
+
+	2007-01-28
 
 	* Fix test suite for situations where there are blanks in the test or
 	  working directories' names.
@@ -41,8 +50,6 @@
 	* Added block-on-subnets regression test.
 
 1.1.4	2007-01-01 (released)
-
-	2007-01-01
 
 	* Update copyright notices.
 
